shixun5/src/exprL-pre-s3.output
Grammar

    0 $accept: input $end

    1 input: %empty

    2 $@1: %empty

    3 input: input $@1 line

    4 line: EOL
    5     | exp EOL

    6 exp: NUMBER
    7    | exp PLUS exp
    8    | exp MINUS exp
    9    | exp MULT exp
   10    | exp DIV exp
   11    | MINUS exp
   12    | exp EXPON exp
   13    | LB exp RB


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 6
PLUS (259) 7
MINUS (260) 8 11
MULT (261) 9
DIV (262) 10
EXPON (263) 12
EOL (264) 4 5
LB (265) 13
RB (266) 13


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
input (13)
    on left: 1 3, on right: 0 3
$@1 (14)
    on left: 2, on right: 3
line (15)
    on left: 4 5, on right: 3
exp (16)
    on left: 6 7 8 9 10 11 12 13, on right: 5 7 8 9 10 11 12 13


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    3 input: input . $@1 line

    $end  shift, and go to state 2

    $default  reduce using rule 2 ($@1)

    $@1  go to state 3


State 2

    0 $accept: input $end .

    $default  accept


State 3

    3 input: input $@1 . line

    NUMBER  shift, and go to state 4
    MINUS   shift, and go to state 5
    EOL     shift, and go to state 6
    LB      shift, and go to state 7

    line  go to state 8
    exp   go to state 9


State 4

    6 exp: NUMBER .

    $default  reduce using rule 6 (exp)


State 5

   11 exp: MINUS . exp

    NUMBER  shift, and go to state 4
    MINUS   shift, and go to state 5
    LB      shift, and go to state 7

    exp  go to state 10


State 6

    4 line: EOL .

    $default  reduce using rule 4 (line)


State 7

   13 exp: LB . exp RB

    NUMBER  shift, and go to state 4
    MINUS   shift, and go to state 5
    LB      shift, and go to state 7

    exp  go to state 11


State 8

    3 input: input $@1 line .

    $default  reduce using rule 3 (input)


State 9

    5 line: exp . EOL
    7 exp: exp . PLUS exp
    8    | exp . MINUS exp
    9    | exp . MULT exp
   10    | exp . DIV exp
   12    | exp . EXPON exp

    PLUS   shift, and go to state 12
    MINUS  shift, and go to state 13
    MULT   shift, and go to state 14
    DIV    shift, and go to state 15
    EXPON  shift, and go to state 16
    EOL    shift, and go to state 17


State 10

    7 exp: exp . PLUS exp
    8    | exp . MINUS exp
    9    | exp . MULT exp
   10    | exp . DIV exp
   11    | MINUS exp .
   12    | exp . EXPON exp

    MULT   shift, and go to state 14
    DIV    shift, and go to state 15
    EXPON  shift, and go to state 16

    $default  reduce using rule 11 (exp)

    Conflict between rule 11 and token PLUS resolved as reduce (%left PLUS).
    Conflict between rule 11 and token MINUS resolved as reduce (%left MINUS).
    Conflict between rule 11 and token MULT resolved as shift (MINUS < MULT).
    Conflict between rule 11 and token DIV resolved as shift (MINUS < DIV).
    Conflict between rule 11 and token EXPON resolved as shift (MINUS < EXPON).


State 11

    7 exp: exp . PLUS exp
    8    | exp . MINUS exp
    9    | exp . MULT exp
   10    | exp . DIV exp
   12    | exp . EXPON exp
   13    | LB exp . RB

    PLUS   shift, and go to state 12
    MINUS  shift, and go to state 13
    MULT   shift, and go to state 14
    DIV    shift, and go to state 15
    EXPON  shift, and go to state 16
    RB     shift, and go to state 18


State 12

    7 exp: exp PLUS . exp

    NUMBER  shift, and go to state 4
    MINUS   shift, and go to state 5
    LB      shift, and go to state 7

    exp  go to state 19


State 13

    8 exp: exp MINUS . exp

    NUMBER  shift, and go to state 4
    MINUS   shift, and go to state 5
    LB      shift, and go to state 7

    exp  go to state 20


State 14

    9 exp: exp MULT . exp

    NUMBER  shift, and go to state 4
    MINUS   shift, and go to state 5
    LB      shift, and go to state 7

    exp  go to state 21


State 15

   10 exp: exp DIV . exp

    NUMBER  shift, and go to state 4
    MINUS   shift, and go to state 5
    LB      shift, and go to state 7

    exp  go to state 22


State 16

   12 exp: exp EXPON . exp

    NUMBER  shift, and go to state 4
    MINUS   shift, and go to state 5
    LB      shift, and go to state 7

    exp  go to state 23


State 17

    5 line: exp EOL .

    $default  reduce using rule 5 (line)


State 18

   13 exp: LB exp RB .

    $default  reduce using rule 13 (exp)


State 19

    7 exp: exp . PLUS exp
    7    | exp PLUS exp .
    8    | exp . MINUS exp
    9    | exp . MULT exp
   10    | exp . DIV exp
   12    | exp . EXPON exp

    MULT   shift, and go to state 14
    DIV    shift, and go to state 15
    EXPON  shift, and go to state 16

    $default  reduce using rule 7 (exp)

    Conflict between rule 7 and token PLUS resolved as reduce (%left PLUS).
    Conflict between rule 7 and token MINUS resolved as reduce (%left MINUS).
    Conflict between rule 7 and token MULT resolved as shift (PLUS < MULT).
    Conflict between rule 7 and token DIV resolved as shift (PLUS < DIV).
    Conflict between rule 7 and token EXPON resolved as shift (PLUS < EXPON).


State 20

    7 exp: exp . PLUS exp
    8    | exp . MINUS exp
    8    | exp MINUS exp .
    9    | exp . MULT exp
   10    | exp . DIV exp
   12    | exp . EXPON exp

    MULT   shift, and go to state 14
    DIV    shift, and go to state 15
    EXPON  shift, and go to state 16

    $default  reduce using rule 8 (exp)

    Conflict between rule 8 and token PLUS resolved as reduce (%left PLUS).
    Conflict between rule 8 and token MINUS resolved as reduce (%left MINUS).
    Conflict between rule 8 and token MULT resolved as shift (MINUS < MULT).
    Conflict between rule 8 and token DIV resolved as shift (MINUS < DIV).
    Conflict between rule 8 and token EXPON resolved as shift (MINUS < EXPON).


State 21

    7 exp: exp . PLUS exp
    8    | exp . MINUS exp
    9    | exp . MULT exp
    9    | exp MULT exp .
   10    | exp . DIV exp
   12    | exp . EXPON exp

    EXPON  shift, and go to state 16

    $default  reduce using rule 9 (exp)

    Conflict between rule 9 and token PLUS resolved as reduce (PLUS < MULT).
    Conflict between rule 9 and token MINUS resolved as reduce (MINUS < MULT).
    Conflict between rule 9 and token MULT resolved as reduce (%left MULT).
    Conflict between rule 9 and token DIV resolved as reduce (%left DIV).
    Conflict between rule 9 and token EXPON resolved as shift (MULT < EXPON).


State 22

    7 exp: exp . PLUS exp
    8    | exp . MINUS exp
    9    | exp . MULT exp
   10    | exp . DIV exp
   10    | exp DIV exp .
   12    | exp . EXPON exp

    EXPON  shift, and go to state 16

    $default  reduce using rule 10 (exp)

    Conflict between rule 10 and token PLUS resolved as reduce (PLUS < DIV).
    Conflict between rule 10 and token MINUS resolved as reduce (MINUS < DIV).
    Conflict between rule 10 and token MULT resolved as reduce (%left MULT).
    Conflict between rule 10 and token DIV resolved as reduce (%left DIV).
    Conflict between rule 10 and token EXPON resolved as shift (DIV < EXPON).


State 23

    7 exp: exp . PLUS exp
    8    | exp . MINUS exp
    9    | exp . MULT exp
   10    | exp . DIV exp
   12    | exp . EXPON exp
   12    | exp EXPON exp .

    EXPON  shift, and go to state 16

    $default  reduce using rule 12 (exp)

    Conflict between rule 12 and token PLUS resolved as reduce (PLUS < EXPON).
    Conflict between rule 12 and token MINUS resolved as reduce (MINUS < EXPON).
    Conflict between rule 12 and token MULT resolved as reduce (MULT < EXPON).
    Conflict between rule 12 and token DIV resolved as reduce (DIV < EXPON).
    Conflict between rule 12 and token EXPON resolved as shift (%right EXPON).
